# Accounting-Copilot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  standards-registry.yaml
.cursor/rules/: accounting-copilot.mdc
.github/workflows/: build-pack.yml  release-app.yml  test.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  (+5 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/examples/: agent_live_check.rs  agent_multiturn_demo.rs  ai_generate_check.rs  continue_path_check.rs  evidence_citation_check.rs  first_install_download_check.rs  import_content_pack.rs  phase2_vm_check.rs  pipeline_live_check.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ai.rs  ai_agent.rs  ai_continue.rs  ai_pipeline.rs  citations.rs  commands.rs  config.rs  db.rs  lib.rs  models.rs  pack.rs  projects.rs  retrieval.rs  session.rs  trash.rs  update.rs
docs/: AI-GENERATION-REWRITE-PLAN.md  ARCHITECTURE.md  DESIGN.md  P2-PLAN.md  RELEASE-NOTES.md  audit-report-2026-06-24-implementation.md  audit-report-2026-06-24.md
examples/: updates-manifest.example.json
scripts/: generate-icons.mjs  import-standards-pack.sh  pack-build.sh  setup-test-env.sh  sync-vault-projects.sh  update-app-manifest.mjs  update-content-manifest.mjs  validate-registry.sh  vm-test-full.sh  vm-test-phase2-backend.sh  vm-test-phase2-ui-flow.sh  vm-test-phase2-ui.sh  vm-test-phase2.sh
updates/: manifest.json
writing-spec/: README.md
(+86 files in other folders)
