[package]
name = "accounting-standards-desktop"
version = "0.1.0"
description = "AccoutingStandards Desktop — IFRS & US GAAP offline standards browser"
authors = ["MoonMaxTea"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2.2"
regex = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3.14"
